# github-tools

./: .gitignore  LICENSE-3rdparty.csv  README.md  generate_all.sh  pyproject.toml  requirements.txt  run_all.sh
scripts/: close_old_prs.py  close_old_prs_with_gh.py
scripts/db/: generate_summary.py  sqlite_writer.py
scripts/interviewing/: generate_large_csv_for_interview_input.py
scripts/logging/: custom_logging.py
scripts/maintainance/: delete_stale_branches.py
scripts/metrics/: generate_metrics.py
scripts/util/: fetch_all_discussions.py  fetch_all_dsicussions.py  fetch_all_issues.py  fetch_all_issues_and_prs.py  fetch_all_labels.py  json_to_csv.py  load_env.py  plot.py
static/: 20250418_095233_vectordotdev_vector_issues.db  20250428_172201_vectordotdev_vector_discussions.json  20250428_172212_vectordotdev_vector_labels.json  20250428_172212_vectordotdev_vrl_labels.json
