[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-tools"
version = "0.0.1"
description = "Personal scripts for GitHub automation and analysis"
authors = [{ name = "Pavlos Rontidis", email = "pavlos.rontidis@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["scripts"]
